# rec-lang

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  error.rs  lib.rs  parser.rs  validator.rs  value.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
examples/: basic.rec
examples/common/: api_keys.rec  base.rec
scripts/: fmt.sh  publish.sh
vscode-ext/: language-configuration.json  package-lock.json  package.json  rec-lang-0.2.0.vsix  tsconfig.json
vscode-ext/snippets/: rec.json
vscode-ext/src/: extension.ts
vscode-ext/syntaxes/: rec.tmLanguage.json
