[workspace]
resolver = "2"
members = ["crates/core", "crates/derive", "crates/cli"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
rec = { path = "./crates/core" }
rec-macros = { path = "./crates/derive" }
rec-cli = { path = "./crates/cli" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
nom = "8.0.0"
thiserror = "2.0.12"
url = "2.5.4"
base58 = "0.2.0"
regex = "1.11.1"
indexmap = "2.10.0"

[profile.fast]
codegen-units = 16
inherits = "release"
opt-level = 2
